deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: prod-deployment
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: nginx-container
          image: nginx

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service

metadata:
  name: prod-service

spec:
  type: ClusterIP

  selector:
    app: web

  ports:
    - protocol: TCP
      port: 85
      targetPort: 80
