deployment1.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: vegetable-deployment
  labels:
    first: app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: vegetableapp

  template:
    metadata:
      labels:
        app: vegetableapp

    spec:
      containers:
        - name: vegetable-container
          image: 16akash/vege:v1.0.0

          ports:
            - containerPort: 4000

---

apiVersion: v1
kind: Service

metadata:
  name: prod-service

spec:
  selector:
    app: vegetableapp

  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4000

  type: ClusterIP
