deployment3.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fitness-deployment
  labels:
    first: app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fitness

  template:
    metadata:
      labels:
        app: fitness

    spec:
      containers:
        - name: fitness-container
          image: 16akash/akash:v1.0.0

          ports:
            - containerPort: 5000

---

apiVersion: v1
kind: Service

metadata:
  name: fitness-service

spec:
  selector:
    app: fitness

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
