gateway.yml
apiVersion: networking.k8s.io/v1
kind: Gateway
metadata:
  name: akash-gateway
  namespace: akash-ns
spec:
  gatewayClassName: kgateway
  listeners: 
    - name: http
      port: 80
      protocol: HTTP 
      allowedRoutes: 
        namespaces:
          from: same
